2009-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	Get rid of the ELCFILES abomination.
	* Makefile.in (update-elclist, ELCFILES, compile-last): Remove.
	(compile-elcfiles): New phony target.
	(compile-main): Compute ELCFILES dynamically.
	(compile-clean): New target to remove left-over elc files.
	(compile, all): Use it.

2009-12-09  Kenichi Handa  <handa@etlken>

	* international/mule-diag.el: Require help-mode instead of help-fns.

2009-12-09  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (ucs-names): Supply a sufficiently
	fine ranges instead of pre-calculating accurate ranges.  Iterate
	with bigger gc-cons-threshold.

2009-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	Add support for stashing a snapshot of the current tree.
	* vc-git.el (vc-git-stash-snapshot): New function.
	(vc-git-stash-map, vc-git-extra-menu-map): Add a mapping for it.

2009-12-08  Jose E. Marchesi  <jemarch@gnu.org>

	* play/gomoku.el (gomoku-mode-map): Remap `move-(beginning|end)-of-line'
	instead of `(beginning|end)-of-line'.

2009-12-08  Glenn Morris  <rgm@gnu.org>

	* vc-mtn.el (vc-mtn-print-log): Fix typo in previous.

	* Makefile.in (ELCFILES): Regenerate.

2009-12-07  Juri Linkov  <juri@jurta.org>

	Don't lazy-highlight the comint output in history Isearch mode.

	* comint.el (comint-history-isearch-search): Instead of
	`comint-line-beginning-position', use `comint-after-pmark-p'
	to check if point if before the process mark, and go to
	`process-mark' in this case.

2009-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (latex-complete)
	(latex-indent-or-complete): Remove.
	(latex-mode): Set completion-at-point-functions instead.

	Provide a standard completion command and hook it into TAB.
	* minibuffer.el (completion-at-point-functions): New var.
	(completion-at-point): New command.
	* indent.el (indent-for-tab-command): Handle the `complete' behavior.
	* progmodes/python.el (python-mode-map): Use completion-at-point.